JAVAIS-36: Footer alignment fixed.

--- a/src/main/webapp/resources/style/detailViewStyle.css
+++ b/src/main/webapp/resources/style/detailViewStyle.css
@@ -9,6 +9,10 @@ html, body {
 	max-height: 15%;
 }
 
+#footerLinks{
+	text-align: center;
+}
+
 .footer{
 	background-image: linear-gradient(to bottom , rgba(0, 0, 0, 0.20), rgba(0, 0, 0, 0.35));
 	position:fixed;
